testing for positive cases passed, enabled debug
